Add material editing actions
